--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 # mypy global options:
 
 [tool.mypy]
-disallow_untyped_calls = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 warn_return_any = true
@@ -28,3 +27,8 @@ exclude_lines = [
 [tool.coverage.run]
   branch = false
   source = ["header_setter"]
+
+# Pylint
+[tool.pylint.'MESSAGES CONTROL']
+max-line-length = 120
+disable = "logging-fstring-interpolation"
