--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ disallow_incomplete_defs = true
 warn_return_any = true
 warn_unused_configs = true
 
+[[tool.mypy.overrides]]
+module = "moto"
+ignore_missing_imports = true
+
 # pytest
 
 [tool.pytest.ini_options]
